--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,20 +134,19 @@ a:not([class]):hover {
 }
 
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 200px; /* Location of the box */
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 200px;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0, 0, 0); /* Fallback color */
-    background-color: rgba(0, 0, 0, 0.9); /* Black w/ opacity */
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.9);
 }
 
-/* Modal Content (image) */
 #modalImage {
     margin: auto;
     display: block;
@@ -155,7 +154,6 @@ a:not([class]):hover {
     max-width: 700px;
 }
 
-/* Caption of Modal Image */
 #caption {
     margin: auto;
     display: block;
@@ -167,7 +165,6 @@ a:not([class]):hover {
     height: 150px;
 }
 
-/* Add Animation */
 .modal-content, #caption {
     -webkit-animation-name: zoom;
     -webkit-animation-duration: 0.6s;
@@ -193,7 +190,6 @@ a:not([class]):hover {
     }
 }
 
-/* The Close Button */
 #close {
     position: absolute;
     top: 15px;
@@ -211,7 +207,6 @@ a:not([class]):hover {
     cursor: pointer;
 }
 
-/* 100% Image Width on Smaller Screens */
 @media only screen and (max-width: 700px) {
     .modal-content {
         width: 100%;
