--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,12 +19,13 @@ body {
     margin-top: 1em;
     max-width: 45em;
     line-height: 1.5em;
-    color: #171717;
+    color: white;
     font-size: large;
+    background-color: #202124;
 }
 
 h1 {
-    background-color: #96ffb9;
+    background-color: #246134;
     text-align: center;
     font-weight: bold;
     font-size: 2em;
@@ -33,7 +34,7 @@ h1 {
 }
 
 h2 {
-    background-color: #1b7340;
+    background-color: #439458;
     color: white;
     text-align: center;
     font-weight: bold;
@@ -50,7 +51,7 @@ h3 {
 
 footer,
 footer a {
-    color: gray;
+    color: lightgray;
     text-align: center;
 }
 
@@ -105,6 +106,7 @@ td {
 }
 
 a:not([class]) {
+    color: white;
     text-decoration: none;
     background-image: linear-gradient(#eeebee 0%, #eeebee 100%);
     background-repeat: repeat-x;
@@ -118,6 +120,7 @@ a:not([class]):hover {
 }
 
 .box {
+    color: black;
     display: inline-table;
     height: 2em;
     width: 100%;
