--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 h1 {
-    background-color: #246134;
+    background-color: #1B7340;
     text-align: center;
     font-weight: bold;
     font-size: 2em;
@@ -34,7 +34,7 @@ h1 {
 }
 
 h2 {
-    background-color: #439458;
+    background-color: #1DA64A;
     color: white;
     text-align: center;
     font-weight: bold;
