--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,7 @@ td {
     vertical-align: top;
 }
 
-a:not([class]) {
+a:not(.badge) {
     color: white;
     text-decoration: none;
     background-image: linear-gradient(#eeebee 0%, #eeebee 100%);
@@ -114,7 +114,7 @@ a:not([class]) {
     background-size: 1px 1px;
 }
 
-a:not([class]):hover {
+a:not(.badge):hover {
     background-image: linear-gradient(rgba(114, 83, 237, 0.45) 0%, rgba(114, 83, 237, 0.45) 100%);
     background-size: 1px 1px;
 }
