--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,7 @@ h2 {
     line-height: 1.2em;
     padding: 0.3em;
     margin-top: 1em;
+    border-radius: 10px;
 }
 
 h3 {
@@ -131,6 +132,7 @@ a:not(.badge):hover {
     margin-left: -1em;
     padding-top: 1em;
     padding-bottom: 1em;
+    border-radius: 10px;
 }
 
 .fullscreen {
