--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,6 +106,22 @@ td {
     vertical-align: top;
 }
 
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+a:active {
+    text-decoration: none;
+}
+
 a:not(.badge) {
     color: white;
     text-decoration: none;
